@@ -1,5 +1,6 @@
 munin (CVS)
 
+  * Main: yet another rewrite of munin-limits open call (SF#1115434).
   * Node: munin-node didn't treat default_plugin_user properly (Deb#295366).
   * Plugins: linux/if* now treats ra* interfaces as wireless.
   * Plugins: minor bugfix in generic/bind9.
